# exqudens-cmake

./: .gitignore  CMakeLists.txt  CMakePresets.json  cmake-build.sh  cmake-clean-build-all.sh  cmake-clean-config-all.sh  cmake-config-all.sh  cmake-config.sh  conanfile.py  dependencies.cmake  dependency.cmake  extension.cmake  get_home_prefix.cmake  name-version.txt  package-config.cmake.in  readme.md
cmake/: util.cmake  vscode.cmake
exqudens-cmake-conan-test/: CMakeLists.txt  conanfile.py
exqudens-cmake-cpp-bytes/: CMakeLists.txt
exqudens-cmake-cpp-strings/: CMakeLists.txt  conanfile.py
exqudens-cmake-cpp-strings/src/main/cpp/exqudens/: Strings.cpp  Strings.hpp
exqudens-cmake-cpp-strings/src/test/cpp/: main.cpp
exqudens-cmake-cpp-strings/src/test/cpp/exqudens/: StringsTests.hpp
exqudens-cmake-cpp-test/: CMakeLists.txt  conanfile.py
exqudens-cmake-cpp-test/src/test/cpp/: main.cpp
exqudens-cmake-cpp-test/src/test/cpp/exqudens/cmake/: Application.cpp  Application.hpp  Procedures.cpp  Procedures.hpp
exqudens-cmake-extension-test/: CMakeLists.txt
exqudens-cmake-extension-test/src/test/cpp/: main.cpp
exqudens-cmake-test/: CMakeLists.txt
src/main/cmake/: conan.cmake  config.cmake  execute.cmake  extension.cmake  generate-toolchain.cmake  msvc-paths.cmake  toolchain-generator.cmake  util.cmake
src/main/cpp/: main.cpp
src/test/cmake/: test_doxygen.cmake  test_execute_script.cmake  test_find_file_in.cmake  test_find_file_in_parent.cmake  test_generate_interface_only_files.cmake  test_set_clang_toolchain.cmake  test_set_clang_toolchain_content.cmake  test_set_conan_architecture.cmake  test_set_conan_compiler.cmake  test_set_conan_compiler_runtime.cmake  test_set_conan_compiler_runtime_type.cmake  test_set_conan_compiler_version.cmake  test_set_conan_msvc_compiler_runtime.cmake  test_set_conan_options.cmake  test_set_conan_os.cmake  test_set_conan_settings.cmake  test_set_gnu_toolchain.cmake  test_set_gnu_toolchain_content.cmake  test_set_iar_toolchain.cmake  test_set_if_empty.cmake  test_set_if_not_defined.cmake  test_set_json.cmake  test_set_msvc_env.cmake  test_set_msvc_path.cmake  test_set_msvc_toolchain.cmake  test_set_msvc_toolchain_content.cmake  test_set_not_found_package_names.cmake  test_set_python_boolean.cmake  test_sphinx.cmake  test_string_replace_between.cmake  test_stub.cmake  test_substring_between.cmake  test_substring_between_replace.cmake  test_substring_from.cmake  test_substring_to.cmake  test_vscode.cmake
src/test/cpp/: TestApplication.hpp  TestConfiguration.hpp  TestThreadPool.hpp  TestUtils.hpp
src/test/cpp/exqudens/: OtherTests.hpp
src/test/resources/pc/: pngpp-0.2.9.pc.in
src/test/resources/pc/pngpp-0.2.9/share/pkgconfig/: pngpp.pc
src/test/resources/test_doxygen/test_1/src/main/cpp/exqudens/: Strings.hpp
src/test/resources/test_execute_script/test_3/: toolchain.cmake  toolchain.cmake.in
src/test/resources/test_execute_script/test_4/: toolchain.cmake
src/test/resources/test_find_file_in_parent/a/: a.txt
src/test/resources/test_find_file_in_parent/a/b/: b.txt
src/test/resources/test_find_file_in_parent/a/b/c/: c.txt
src/test/resources/test_generate_interface_only_files/test_1/expected/testnamespace/testsubnamespace/: TestClass2.hpp
src/test/resources/test_generate_interface_only_files/test_1/input/testnamespace/testsubnamespace/: TestClass2.cpp  TestClass3.hpp
src/test/resources/test_generate_interface_only_files/test_2/input/testnamespace/testsubnamespace/: TestClass1.hpp  TestClass3.cpp
src/test/resources/test_generate_interface_only_files/test_3/expected/testnamespace/testsubnamespace/: TestClass3.hpp
src/test/resources/test_generate_interface_only_files/test_3/input/testnamespace/testsubnamespace/: TestClass2.hpp  WindowsTestClass3.cpp
src/test/resources/test_set_clang_toolchain/test_1/: clang-x64-toolchain.cmake  unix-clang-x64-toolchain.cmake
src/test/resources/test_set_gnu_toolchain/test_1/: toolchain.cmake  unix-toolchain.cmake  windows-toolchain.cmake
src/test/resources/test_set_gnu_toolchain/test_2/: toolchain.cmake  unix-toolchain.cmake
src/test/resources/test_set_gnu_toolchain/test_3/: linux-toolchain.cmake  windows-toolchain.cmake
src/test/resources/test_set_gnu_toolchain_content/test_1/: gnu-x64-toolchain.cmake  toolchain.cmake
src/test/resources/test_set_gnu_toolchain_content/test_3/: linux-toolchain.cmake  windows-toolchain.cmake
src/test/resources/test_set_iar_toolchain/test_1/: toolchain.cmake  unix-toolchain.cmake
src/test/resources/test_set_json/test_1/: 1.json
src/test/resources/test_set_msvc_toolchain/test_1/: msvc-16-x64-toolchain.cmake
src/test/resources/test_set_msvc_toolchain/test_2/: msvc-16-x64-toolchain.cmake  msvc-17-x64-toolchain.cmake
src/test/resources/test_set_msvc_toolchain/test_3/: msvc-16-x64-toolchain.cmake  msvc-17-x64-toolchain.cmake
src/test/resources/test_set_msvc_toolchain_content/test_3/: msvc-16-x64-toolchain.cmake
src/test/resources/test_sphinx/test_1/: name-version.txt
src/test/resources/test_sphinx/test_1/doc/: conf.py
src/test/resources/test_vscode/test_1/: c_cpp_properties.json  launch.json  settings.json
src/test/resources/vscode/: command-variable-launch.json  launch.json
