cmake_minimum_required(VERSION 3.20)
project("${CMAKE_PROJECT_NAME}-conan-test" VERSION "${CMAKE_PROJECT_VERSION}")

message("project: '${PROJECT_NAME}-${PROJECT_VERSION}'")

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY                "${PROJECT_BINARY_DIR}/bin")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE        "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_MINSIZEREL     "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG          "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}")

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY                "${PROJECT_BINARY_DIR}/lib")
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE        "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY}")
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELWITHDEBINFO "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY}")
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_MINSIZEREL     "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY}")
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG          "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY}")

set(CMAKE_LIBRARY_OUTPUT_DIRECTORY                "${PROJECT_BINARY_DIR}/lib")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE        "${CMAKE_LIBRARY_OUTPUT_DIRECTORY}")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELWITHDEBINFO "${CMAKE_LIBRARY_OUTPUT_DIRECTORY}")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_MINSIZEREL     "${CMAKE_LIBRARY_OUTPUT_DIRECTORY}")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG          "${CMAKE_LIBRARY_OUTPUT_DIRECTORY}")

set("${PROJECT_NAME}_CONAN_INSTALL_PREFIX" "${PROJECT_BINARY_DIR}/conan-install")

message("BUILD_SHARED_LIBS: '${BUILD_SHARED_LIBS}'")

include("${CMAKE_SOURCE_DIR}/src/main/cmake/conan.cmake")
include("${CMAKE_SOURCE_DIR}/src/main/cmake/util.cmake")

set_conan_path(CONAN_PROGRAM_PATH "$ENV{PATH}")
set_conan_command(CONAN_COMMAND "${CONAN_PROGRAM_PATH}")

set(CONAN_PACKAGE_NAMES
    "zlib"
    "libpng"
    "yaml-cpp"
)

set_conan_settings(
    CONAN_SETTINGS
    "${CMAKE_SYSTEM_NAME}"
    "${CMAKE_SYSTEM_PROCESSOR}"
    "${CMAKE_CXX_COMPILER_ID}"
    "${CMAKE_CXX_COMPILER_VERSION}"
    "${CMAKE_MSVC_RUNTIME_LIBRARY}"
    "${CMAKE_CXX_STANDARD}"
    "${CMAKE_BUILD_TYPE}"
)

message("CONAN_SETTINGS: '${CONAN_SETTINGS}'")

set_conan_options(
    CONAN_OPTIONS
    "${BUILD_SHARED_LIBS}"
    ${CONAN_PACKAGE_NAMES}
    "zlib=SHARED"
    "libpng=STATIC"
    "yaml-cpp"
)

message("CONAN_OPTIONS: '${CONAN_OPTIONS}'")

if(NOT EXISTS "${${PROJECT_NAME}_CONAN_INSTALL_PREFIX}")
    conan_install(
        "${CONAN_COMMAND}"
        "${CMAKE_CURRENT_SOURCE_DIR}/conanfile.py"
        "${${PROJECT_NAME}_CONAN_INSTALL_PREFIX}"
        "${CONAN_SETTINGS}"
        "${CONAN_OPTIONS}"
    )
endif()

if(EXISTS "${${PROJECT_NAME}_CONAN_INSTALL_PREFIX}/conan_paths.cmake")
    include("${${PROJECT_NAME}_CONAN_INSTALL_PREFIX}/conan_paths.cmake")
endif()

find_package("ZLIB" "1.2.11" #[[REQUIRED]] QUIET)
find_package("PNG" "1.6.37" #[[REQUIRED]] QUIET)
find_package("json-c" "0.15" #[[REQUIRED]] QUIET)

message("ZLIB_FOUND: '${ZLIB_FOUND}'")
message("PNG_FOUND: '${PNG_FOUND}'")
message("json-c_FOUND: '${json-c_FOUND}'")

set_not_found_package_names(NOT_FOUND_PACKAGE_NAMES
    "ZLIB"
    "PNG"
    "json-c"
)

message("NOT_FOUND_PACKAGE_NAMES: '${NOT_FOUND_PACKAGE_NAMES}'")

if(NOT "" STREQUAL "${NOT_FOUND_PACKAGE_NAMES}")
    foreach(name ${NOT_FOUND_PACKAGE_NAMES})
        message(WARNING "${name}_FOUND: '${${name}_FOUND}'")
    endforeach()
    return()
endif()
