cmake_minimum_required(VERSION 3.21 FATAL_ERROR)
project("${CMAKE_PROJECT_NAME}-cpp-test" VERSION "${CMAKE_PROJECT_VERSION}" LANGUAGES "C" "CXX")

message("project: '${PROJECT_NAME}-${PROJECT_VERSION}'")

set("${PROJECT_NAME}_PRINT_VARIABLES"
    ${${CMAKE_PROJECT_NAME}_PRINT_VARIABLES}
    "<nl>"
    "${PROJECT_NAME}_CXX_IMPLICIT_INCLUDE_DIRECTORIES"
    "${PROJECT_NAME}_CXX_IMPLICIT_LINK_DIRECTORIES"
    "<nl>"
    CMAKE_RUNTIME_OUTPUT_DIRECTORY
    CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE
    CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO
    CMAKE_RUNTIME_OUTPUT_DIRECTORY_MINSIZEREL
    CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG
    "<nl>"
    CMAKE_ARCHIVE_OUTPUT_DIRECTORY
    CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE
    CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELWITHDEBINFO
    CMAKE_ARCHIVE_OUTPUT_DIRECTORY_MINSIZEREL
    CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG
    "<nl>"
    CMAKE_LIBRARY_OUTPUT_DIRECTORY
    CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE
    CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELWITHDEBINFO
    CMAKE_LIBRARY_OUTPUT_DIRECTORY_MINSIZEREL
    CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG
    "<nl>"
    "${PROJECT_NAME}_CMAKE_INSTALL_PREFIX"
    "${PROJECT_NAME}_CONAN_INSTALL_PREFIX"
)

print_variables("${PROJECT_NAME}" "${MESSAGE_MODE}" "${PROJECT_NAME} before-config "
    ${${PROJECT_NAME}_PRINT_VARIABLES}
)

if(MSVC)
    set("${PROJECT_NAME}_CXX_IMPLICIT_INCLUDE_DIRECTORIES" "${${CMAKE_PROJECT_NAME}_CXX_IMPLICIT_INCLUDE_DIRECTORIES}")
    set("${PROJECT_NAME}_CXX_IMPLICIT_LINK_DIRECTORIES" "${${CMAKE_PROJECT_NAME}_CXX_IMPLICIT_LINK_DIRECTORIES}")
endif()

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY                "${PROJECT_BINARY_DIR}/bin")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE        "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_MINSIZEREL     "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG          "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}")

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY                "${PROJECT_BINARY_DIR}/lib")
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE        "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY}")
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELWITHDEBINFO "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY}")
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_MINSIZEREL     "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY}")
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG          "${CMAKE_ARCHIVE_OUTPUT_DIRECTORY}")

set(CMAKE_LIBRARY_OUTPUT_DIRECTORY                "${PROJECT_BINARY_DIR}/lib")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE        "${CMAKE_LIBRARY_OUTPUT_DIRECTORY}")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELWITHDEBINFO "${CMAKE_LIBRARY_OUTPUT_DIRECTORY}")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_MINSIZEREL     "${CMAKE_LIBRARY_OUTPUT_DIRECTORY}")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG          "${CMAKE_LIBRARY_OUTPUT_DIRECTORY}")

set("${PROJECT_NAME}_CMAKE_INSTALL_PREFIX" "${PROJECT_BINARY_DIR}/cmake-install")
set("${PROJECT_NAME}_CONAN_INSTALL_PREFIX" "${PROJECT_BINARY_DIR}/conan-install")

print_variables("${PROJECT_NAME}" "${MESSAGE_MODE}" "${PROJECT_NAME} after-config "
    ${${PROJECT_NAME}_PRINT_VARIABLES}
)

add_library("${PROJECT_NAME}-lib"
    "src/test/cpp/exqudens/cmake/Application.hpp"
    "src/test/cpp/exqudens/cmake/Application.cpp"
)
target_include_directories("${PROJECT_NAME}-lib" PUBLIC
    "$<BUILD_INTERFACE:${${PROJECT_NAME}_CXX_IMPLICIT_INCLUDE_DIRECTORIES}>"
    "$<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/src/test/cpp>"
    "$<INSTALL_INTERFACE:include>"
)
target_link_directories("${PROJECT_NAME}-lib" PUBLIC
    "${${PROJECT_NAME}_CXX_IMPLICIT_LINK_DIRECTORIES}"
)

add_executable("${PROJECT_NAME}-executable" "src/test/cpp/main.cpp")
target_link_libraries("${PROJECT_NAME}-executable" PRIVATE
    "${PROJECT_NAME}-lib"
)
